fix: add back anchor links for cmdline arguments (#2006)